--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ description:
   <br>   
   I'm working on Data Analysis, Machine learning problems.
   Worked with Govt org in web development using Django, CodeIgnitor.
-  Alos worked as Network Administrator for 8 years.
+  Also worked as Network Administrator for 8 years.
   <br>
   </p>
 
